--- a/index.html
+++ b/index.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link href="./src/index.css" rel="stylesheet" />
+		<title>Calm Box Breathing</title>
 	</head>
 	<body>
 		<div id="root"></div>
-		<!-- React mounts here -->
-
-		<!-- Vite loads your main.jsx -->
-		<script type="module" src="./src/main.jsx"></script>
+		<script type="module" src="/src/main.jsx"></script>
 	</body>
 </html>
